Ticket #1489: Srolling overflow fix. Making the form always have y-axis scroll.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -6388,7 +6388,6 @@ html body .livefyre-wrapper {
 @media all and (max-height: 32em) {
   #nav-media-form {
     max-height: 290px;
-    overflow-y: scroll;
   }
 }
 #modalContent.modal-install-bookmarklet {
